--- a/src/main/webapp/WEB-INF/template/template.xhtml
+++ b/src/main/webapp/WEB-INF/template/template.xhtml
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:jsf="http://xmlns.jcp.org/jsf"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <head jsfc="h:head">
         <meta charset="UTF-8" />
@@ -16,6 +17,16 @@
                 <ul class="nav navbar-nav">
                     <ui:fragment rendered="#{loginUser.isLoggedIn()}">
                         <li>
+                            <a href="#" data-toggle="dropdown">
+                                ユーザー管理<span class="caret"> </span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a jsf:outcome="/user/register-user.xhtml">ユーザー登録</a></li>
+                                <li><a jsf:outcome="/user/user-list.xhtml">ユーザー一覧</a></li>
+                            </ul>
+                        </li>
+
+                        <li>
                             <a href="${request.contextPath}/system/logout">ログアウト</a>
                         </li>
                     </ui:fragment>
@@ -26,5 +37,7 @@
             <ui:insert name="content">
             </ui:insert>
         </div>
+        <h:outputScript library="js" name="jquery/jquery.min.js" />
+        <h:outputScript library="js" name="bootstrap/bootstrap.min.js" />
     </body>
 </html>
