エラー項目はテキストを赤くしてみた

--- a/src/main/webapp/resources/component/textField.xhtml
+++ b/src/main/webapp/resources/component/textField.xhtml
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:jsf="http://xmlns.jcp.org/jsf"
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:composite="http://xmlns.jcp.org/jsf/composite">
 
@@ -16,15 +17,9 @@
     </composite:interface>
 
     <composite:implementation>
-        <div id="#{cc.clientId}">
-            <c:set var="textValue" value="#{cc.clientId}_textValue" />
-            textValue = #{textValue}
-            <div class="#{not requestScope[textValue].valid ? 'has-error' : ''}">
-                <label for="#{cc.attrs.id}" class="control-label">#{cc.attrs.label}</label>
-                <input type="#{cc.attrs.type}" id="#{cc.attrs.id}" jsf:value="#{cc.attrs.value}"
-                       binding="#{requestScope[textValue]}"
-                       class="form-control" required="#{cc.attrs.required}" maxlength="#{cc.attrs.maxlength}" />
-            </div>
-        </div>
+        <label for="#{cc.attrs.id}" class="control-label">#{cc.attrs.label}</label>
+        <h:inputText id="#{cc.attrs.id}" value="#{cc.attrs.value}"
+               style="#{component.valid ? '' : 'color: red;'}"
+               class="form-control" required="#{cc.attrs.required}" maxlength="#{cc.attrs.maxlength}" />
     </composite:implementation>
 </html>
